jio-jdbc refactor and jio-test bug jdbc debugger